<resources>
    <string name="app_name">CS3270A5 Hutchins</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="results_timeRemaining">Time Remaining</string>
    <string name="results_title">Practice Making Change</string>
    <string name="results_changeToMake">Change To Make</string>
    <string name="results_ChangeTotalSoFar">Change Total So Far</string>
    <string name="money_placeholder">0.00</string>
    <string name="start_over">Start Over</string>
    <string name="new_amount">New Amount</string>
    <string name="correct_change_count">Correct Change Count</string>

    <!-- denomination button strings -->
    <string name="denomination_0">0</string>
    <string name="denomination_50_dollar">$50</string>
    <string name="denomination_20_dollar">$20</string>
    <string name="denomination_10_dollar">$10</string>
    <string name="denomination_5_dollar">$5</string>
    <string name="denomination_1_dollar">$1</string>
    <string name="denomination_50">.50</string>
    <string name="denomination_25">.25</string>
    <string name="denomination_10">.10</string>
    <string name="denomination_05">.05</string>
    <string name="denomination_01">.01</string>
    <string name="btn_save">Save</string>
    <string name="max_amount_message">Please use the seek bar to update max change amount</string>
    <string name="max_amount">Max Amount</string>
    <string name="default_max_value">1.00</string>
    <string name="mainMenu_ZeroCorrectCount">Zero Correct Count</string>
    <string name="mainMenu_SetChangeMax">Set Change Max</string>
    <string name="something_went_wrong">Something Went wrong :(</string>
    <string name="success_title">You did it!</string>
    <string name="success_message">You were able to make the correct change</string>
    <string name="too_much_title">That\'s too much change.</string>
    <string name="try_again_message">You should try again</string>
    <string name="too_long_title">You took too long</string>
    <string name="toast_count_reset">Count Reset</string>
    <string name="dialog_button">OK</string>

</resources>
