<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangeResults">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        android:textSize="25sp"
        android:textColor="@color/customColor"
        android:text="@string/results_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/txt_changeToMake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/results_changeToMake"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_ChangeTotalSoFar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/results_ChangeTotalSoFar"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_countdown2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/results_timeRemaining"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/txt_changeToMakeOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/money_placeholder"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_ChangeTotalSoFarOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/money_placeholder"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_countdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/denomination_0"
                android:textColor="@color/colorGreen"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>