<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ChangeActions">

    <!-- button container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- this is also a button container but allows for left centering-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnStartOver"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:text="@string/start_over" />

            <!-- centers the right button to the right-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">

                <Button
                    android:id="@+id/btnNewAmount"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:text="@string/new_amount" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!-- text layout container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:padding="20dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:text="@string/correct_change_count" />

        <TextView
            android:id="@+id/txt_correctChangeCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="textEnd"
            android:textColor="@color/colorGreen"
            android:textSize="25sp"
            android:text="@string/denomination_0" />

    </LinearLayout>


</LinearLayout>